--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -30,19 +30,16 @@ jobs:
       with:
         python-version: "3.10"
 
-    - name: Install Dependencies
-      run: uv sync --group docs
-
     - name: Build Docs
-      run: sphinx-ape build --mode "${{ github.event_name }}"
+      run: uv run --group docs sphinx-ape build --mode "${{ github.event_name }}"
 
     - name: Doctesting
-      run: sphinx-ape test
+      run: uv run --group docs sphinx-ape test
 
     - name: Commit and publish documentation changes to gh-pages branch
       if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' || github.event_name == 'release' }}
       run: |
-        sphinx-ape publish --skip-push --repo ${{ github.repository }}
+        uv run --group docs sphinx-ape publish --skip-push --repo ${{ github.repository }}
         cd gh-pages
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
