--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -26,14 +26,16 @@ jobs:
     - uses: actions/checkout@v5
 
     - name: Setup Python
-      uses: actions/setup-python@v5
+      uses: astral-sh/setup-uv@v7
       with:
         python-version: "3.10"
 
-    - name: Install Dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install .[doc]
+    - name: Build Docs
+      run: uv sync
+
+    - name: Add venv to PATH
+      run: echo "${{ github.workspace }}/.venv/bin" >> $GITHUB_PATH
+      # NOTE: Otherwise the next action nukes the path when it starts
 
     - name: Ape Docs
       uses: apeworx/sphinx-ape@main
