--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,7 +5,7 @@ repos:
     -   id: check-yaml
 
 -   repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.12.0  # Latest ruff version
+    rev: v0.14.10  # Latest ruff version
     hooks:
     -   id: ruff
         args: [--fix, --exit-non-zero-on-fix]
@@ -31,6 +31,7 @@ repos:
     hooks:
     -   id: mdformat
         additional_dependencies: [mdformat-gfm, mdformat-frontmatter, mdformat-pyproject]
+        args: ["*.md", "docs/**/*.md"]
 
 default_language_version:
     python: python3
