--- a/pyproject.toml
+++ b/pyproject.toml
@@ -183,7 +183,7 @@ check_untyped_defs = true
 plugins = ["pydantic.mypy"]
 
 [tool.pytest.ini_options]
-norecursedirs = "projects"
+norecursedirs = ["projects", ".hypothesis"]
 
 # NOTE: 'no:ape_test' Prevents the ape plugin from activating on our tests
 #    And 'pytest_ethereum' is not used and causes issues in some environments.
